# email_newsletter

./: .gitignore  Cargo.toml  configuration.yaml
migrations/: 20260102215133_create_subscriptions_table.sql
scripts/: Makefile  init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
